# tmpfs.org

./: .gitignore  .jshintrc  Makefile  README.md  app.js  app.production.js  app.stage.js  css-inject.js  package.json  page-identifier.js  readme.md  site.toml  tmux.conf
assets/css/: _colors.sss  _content.sss  _contrast.sss  _document.sss  _fonts.sss  _footer.sss  _header.sss  _headings.sss  _links.sss  _responsive.sss  _typography.sss  _variables.sss  style.sss
assets/js/: contrast.js  index.js  progressive.js  scroll.js  selected.js
blog/: site.toml
blog/site/: index.md
code/async-fsm-model/: Cargo.toml  README.md
code/process-supervisor/: Cargo.toml  README.md
code/process-supervisor/src/: child.rs  lib.rs  supervisor.rs  worker.rs
code/process-supervisor/src/ipc/: child.rs  mod.rs  server.rs  supervisor.rs  worker.rs
doc/: readme.md
doc/readme/: developer.md  links.md
graphics/logos/: bbc-grayscale-new.xcf  bbc-grayscale.xcf  digitas-lbi-grayscale.xcf  ford-grayscale.xcf  ford-logo-grayscale.xcf  ft-grayscale.xcf  lastminute-grayscale.xcf  lastminute.xcf  method-grayscale.xcf  namco.xcf  nokia-grayscale.xcf  orange-grayscale.xcf  saatchi-grayscale.xcf  square-enix-grayscale.xcf  start-design.xcf  tribal-ddb-grayscale.xcf  vidal-sassoon-grayscale.xcf  vw-grayscale.xcf  wunderman-grayscale.xcf  xbox-grayscale.xcf  yo-sushi-grayscale.xcf
kitchen/: page.toml  site.toml
kitchen/site/: 404.html  assets  data.toml  index.md  layout.hbs  masala-dhal.md  mushroom-risotto.md  spiced-coconut-semolina.md
portfolio/: Makefile  page.toml  site.toml
portfolio/site/: 404.html  index.html  layout.hbs  (+1 more)
sbin/: cache  config.js  create  critical  critical-css-path.js  deploy
site/: 404.html  about.html  contact.md  data.toml  index.html  index.md  layout.hbs  skills.html  work.html
src/: 404.sgr  index.sgr  layout.sgr  partial.sgr
views/: 404.sgr  about.sgr  index.sgr  index.sgr.bak  layout.sgr  partial.sgr  skills.sgr  tech.sgr  work.sgr
website/: site.toml
(+112 files in other folders)
