[package]
name = "ipc-test"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
default-run = "supervisor"

[dependencies]
thiserror = "1"
interprocess = "1.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
json-rpc2 = { version= "0.9", path = "/home/muji/git/json-rpc2" }
serde_json = "1"
serde = {version = "1", features = ["derive"]}
log = "0.4"
pretty_env_logger = "0.4"
once_cell = "1.7"

[[bin]]
name = "supervisor"
path = "src/supervisor.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[features]
worker = []
supervisor = []
